Fix modal not centred bug see bug 4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,12 @@ h1 {
 
 #LeaderBoardModal .modal-body {
     max-height: 20vh;
+    padding: 0 20px;
     overflow: auto;
+}
+
+.modal-open {
+    overflow-y: inherit !important;
 }
 
 /* SCROLL BAR */
